update examples